# glslang-lib

./: CMakeLists.txt
StandAlone/: CMakeLists.txt
